Bug 399464 - Discover does not remember Snap permissions
Summary: Discover does not remember Snap permissions
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Snap Backend (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-06 21:00 UTC by Patrick Silva
Modified: 2018-10-08 20:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.14.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-10-06 21:00:25 UTC
On neon dev unstable...

STEPS TO REPRODUCE
1. open discover, search for some Snap package already installed, open its description
2. click "Configure permissions..." button, check/uncheck any permission
3. restart discover, see the permissions of the same app

OBSERVED RESULT
changes done in the step 2 were lost

EXPECTED RESULT
any change in snap permissions is remembered
 

ADDITIONAL INFORMATION
snap package tested: ScreenCloud
Comment 1 Aleix Pol 2018-10-08 12:11:20 UTC
Git commit 32e481b5c1ddee8f3c01b13ee07fdcf3d0d5cefa by Aleix Pol.
Committed on 08/10/2018 at 12:09.
Pushed by apol into branch 'Plasma/5.14'.

snap: Fix permissions logic, make sure user sees errors when they happen

M  +3    -2    libdiscover/backends/SnapBackend/SnapResource.cpp

https://commits.kde.org/discover/32e481b5c1ddee8f3c01b13ee07fdcf3d0d5cefa