snap: Fix permissions logic, make sure user sees errors when they happen

BUG: 399464